<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_home"
        app:titleTextColor="@color/text_primary"
        app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

    <!-- SwipeRefreshLayout -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_anime_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/spacing_sm"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_anime" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!-- Loading Shimmer -->
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_sm">

            <include layout="@layout/item_shimmer" />
            <include layout="@layout/item_shimmer" />
            <include layout="@layout/item_shimmer" />
            <include layout="@layout/item_shimmer" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <!-- Error State -->
    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_lg"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:visibility="visible">

        <ImageView
            android:layout_width="@dimen/icon_size_lg"
            android:layout_height="@dimen/icon_size_lg"
            android:src="@drawable/ic_error"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:gravity="center"
            android:text="@string/error_generic"
            android:textColor="@color/white"
            android:textSize="@dimen/text_body" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/retry"
            android:textColor="@color/white"
            style="@style/Widget.Material3.Button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
